<resources>
    <string name="app_name">MoviesApp</string>
    <string name="sign_in">Sign in</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="user_profile">user profile</string>
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="watch_list">Watch list</string>
    <string name="categories">Categories</string>
    <string name="dummy_text">Nameless. Fearless. Relentless. The CIA trained him to be ghost, to exist in tge gray. Now they want to make their most dangerous asset disappear. Now they want to make their most dangerous asset disappear</string>
    <string name="_120_min">%1$d min</string>
    <string name="remove">Remove</string>
    <string name="details">Details</string>
    <string name="there_is_no_movies_yet">There Is No Movies Yet!</string>
    <string name="add_your_favorite_movies_by_clicking">Add your favorite movies by clicking +</string>
    <string name="fetch_movies">Fetch movies</string>
    <string name="like">Like</string>
    <string name="description">Description</string>
    <string name="we_are_sorry_we_can_not_find_the_movie">We are sorry. We can not find the movie</string>
    <string name="language">Language</string>
    <string name="email_label">Email</string>
    <string name="invalid_email_or_password">Invalid email or password!</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="movies_by_category">Movies by category</string>
</resources>