<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/splash_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/white"
            android:hint="@string/full_name"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/white"
            android:hint="@string/email_label"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:text="@string/invalid_email_or_password"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_new_account_btn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/dark_grey"
            android:paddingHorizontal="20dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/grey_m60"
            android:textSize="18sp"
            app:cornerRadius="14dp" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/baby_blue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>