<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:background="@color/black"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="0dp"
        android:text="@string/categories"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:icon="@drawable/down_arrow"
        app:iconGravity="end"
        app:iconSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_categories">

        <include
            android:id="@+id/include_movies_container"
            layout="@layout/layout_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fetch_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/fetch_movies"
        android:backgroundTint="@color/baby_blue70"/>

</androidx.constraintlayout.widget.ConstraintLayout>