<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/dark_grey"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baby_blue70"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/movies"
        android:scaleType="fitXY"
        android:src="@drawable/movie_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divider" />

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="The Gray Man"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/img_movie"
        app:layout_constraintTop_toTopOf="@id/img_movie" />


    <TextView
        android:id="@+id/txt_movie_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_m60"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/txt_movie_title"
        app:layout_constraintTop_toBottomOf="@id/txt_movie_title" />

    <TextView
        android:id="@+id/txt_movie_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_120_min"
        android:textColor="@color/grey_m60"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/txt_movie_year"
        app:layout_constraintTop_toBottomOf="@id/txt_movie_title" />

    <TextView
        android:id="@+id/txt_movie_description"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:paddingBottom="5dp"
        android:text="@string/dummy_text"
        android:textColor="@color/grey_m"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_movie_title"
        app:layout_constraintTop_toBottomOf="@id/txt_movie_year" />

    <ImageView
        android:id="@+id/btn_add_to_watch_list"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add_icon"
        app:layout_constraintStart_toStartOf="@id/txt_movie_description"
        app:layout_constraintTop_toBottomOf="@id/txt_movie_description" />

    <TextView
        android:id="@+id/txt_add_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Watch list"
        android:textColor="@color/grey_m60"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@id/btn_add_to_watch_list"
        app:layout_constraintStart_toStartOf="@id/btn_add_to_watch_list"
        app:layout_constraintTop_toBottomOf="@id/btn_add_to_watch_list" />

</androidx.constraintlayout.widget.ConstraintLayout>